fix: change text line height and letter spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,3 +32,8 @@ body::-webkit-scrollbar-thumb {
 * {
   box-sizing: border-box;
 }
+
+p {
+  letter-spacing: 1px;
+  line-height: 32px !important;
+}
